# cellular-automata-based-cryptanalysis

./: CMakeLists.txt  DECLARATION  LICENCE  README  SECURITY.md  caca_output.md  filelist.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: c-cpp.xxx  codeql.xxx  codeql.yml
docs/: caca_dataset_gen_og.md  caca_nother_idea.md  initial_resullts_overview.md  joined_attempt_i.md  next.md  nist.md  paper_b_SIMDupdate.md  paper_just_needs_refs_plus_code_example.md  paper_partial_a.md  paper_partial_b.md  petey_summaryr_of_results.txt  quick_write-up.md  test_dataset_stats.csv  use_for_the_tech.md
test/dataset_gen/: caca_dataset_gen.md  ctrl_noise_5k.py  ncpt_XOR_short.py  ncpt_ceasar.py  ncpt_cheesy.py  ncpt_flawed_prng.py  ncpt_shift_mix.py
test/test_dataset/: HOW_TO.md  run_all.ps1  run_all.sh
v-5-1-4/: caca_main.cpp  test_ca.cpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/post_refactor/v-0-0-1/: CMakeLists.txt
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/: CMakeLists.txt  FILE_STRUCTURE.md
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c/: approximateEntropy.c  assess.c  blockFrequency.c  cusum.c  discreteFourierTransform.c  frequency.c  generators.c  linearComplexity.c  longestRunOfOnes.c  matrix.c  nonOverlappingTemplateMatchings.c  overlappingTemplateMatchings.c  randomExcursions.c  randomExcursionsVariant.c  rank.c  runs.c  serial.c  universal.c  utilities.c
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-0-0-1/: main.cpp  main_rule82.cpp  main_rule82_fullgrid.cpp  pattern_analyzer.h
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-0-1-0/: main_adv.cpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-1-0-0/cmakelists/: CMakeLists.txt
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-1-0-0/generators/: bbs.cpp  cubic_congruential.cpp  lcg.cpp  micali_schnorr.cpp  modular_exponentiation.cpp  quadratic_congruential.cpp  quadratic_congruential.hpp  xor_generator.cpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-2-0-0/: README.md
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-2-0-0/src/: bitsequence.cpp  ca_analyzer.cpp  ca_analyzer.hpp  ca_nist_analyzer.hpp  common.cpp  common.hpp  core_class_structure.cpp  main.cpp  math_functions.cpp  math_functions.hpp  nist_sts.cpp  nist_sts.hpp  statistical_test.hpp  test_suite.cpp  test_suite.hpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-2-0-0/src/nist_sts/: generator_factory.cpp  test_suite.cpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-2-0-0/src/nist_sts/tests/: frequency_test.cpp  frequency_test.hpp  linear_complexity_test.hpp  longest_run_test.cpp  longest_run_test.hpp  non_overlapping_template_test.hpp  overlapping_template_test.cpp  random_excursions_test.cpp  random_excursions_variant_test.hpp  rank_test.cpp  rank_test.hpp  runs_test.cpp  universal_test.cpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-3-0-0/: README.md
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-3-0-0/cmakelists/: CMakeLists.txt
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-3-0-0/src/: ca_nist_analyzer.hpp  common.hpp  frequency.hpp  main.cpp  math_functions.cpp  nist_sts.hpp  stat_analyzer.cpp  stat_analyzer.hpp  statistical_test.hpp  test_suite.hpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-3-0-0/src/generators/: bbs.cpp  cubic_congruential.cpp  cubic_congruential.hpp  quadratic_congruential.cpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-3-0-0/src/nist_sts/: generator_factory.hpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-3-0-0/src/nist_sts/tests/: cumulative_sums_test.cpp  cumulative_sums_test.hpp  dft_test.hpp  serial_test.hpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-3-0-1/: bitsequence.cpp  ca_analyzer.hpp  common.cpp  common.hpp  core_class_structure.hpp  statistical_test.hpp  visualization_generator-med.cpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-3-0-1/generators/: bbs.hpp  cubic_congruential.cpp  cubic_congruential.hpp  lcg.hpp  quadratic_congruential.cpp  quadratic_congruential.hpp  xor_generator.cpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-3-0-1/nist_sts/: generator_factory.cpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-3-0-1/nist_sts/tests/: approximate_entropy_test.cpp  longest_run_test.hpp  random_excursions_test.hpp  rank_test.hpp  runs_test.hpp  serial_test.cpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-3-0-1/src/: bitsequence.cpp  bitsequence.hpp  common.hpp  core_class_structure.cpp  nist_sts.hpp  stat_analyzer.hpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-3-0-1/src/generators/: lcg.cpp  micali_schnorr.cpp  micali_schnorr.hpp  modular_exponentiation.cpp  modular_exponentiation.hpp  xor_generator.hpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-3-0-1/src/nist_sts/tests/: block_frequency_test.cpp  block_frequency_test.hpp  frequency_test.hpp  linear_complexity_test.cpp  longest_run_test.cpp  non_overlapping_template_test.cpp  overlapping_template_test.hpp  random_excursions_test.cpp  rank_test.cpp  runs_test.cpp  universal_test.cpp  universal_test.hpp
v-5-1-4/v-5-0-1-/v-5-0-0-/code/pre_refactor/old/c++/v-NIST_test-suite/: approximate_entropy_test.cpp  approximate_entropy_test.hpp  bbs.cpp  bitsequence.cpp  bitsequence.hpp  block_frequency_test.cpp  block_frequency_test.hpp  ca_analyzer.cpp  ca_analyzer.hpp  common.cpp  common.hpp  core_class_structure.cpp  cubic_congruent.cpp  cumulative_sums_test.cpp  cumulative_sums_test.hpp  dft_test.cpp  dft_test.hpp  example_usage.cpp  frequency_test.cpp  frequency_test.hpp  generator_factory.cpp  lcg.cpp  lcgb.cpp  linear_complexity_test.cpp  linear_complexity_test.hpp  longest_run_test.cpp  longest_run_test.hpp  main.cpp  math_fucntions.cpp  micali_schorr.cpp  modular_exponentiation.cpp  modular_exponentiation.hpp  non_overlapping_template_test.cpp  non_overlapping_template_test.hpp  overlapping_template_test.cpp  overlapping_template_test.hpp  quadratic_congruential.cpp  random_excursions_test.cpp  random_excursions_test.hpp  random_excursions_variant_test.cpp  (+13 more)
(+54 files in other folders)
